--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">shop</string>
+    <string name="_4_6">4.6</string>
+    <string name="_850_00">$850.00</string>
 </resources>
